--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "https://biradon.github.io/"
+baseURL: "https://github.com/biradon/biradon.github.io"
 languageCode: en-us
 title: Chau Minh Truong
 theme: PaperMod
