--- a/hugo.yml
+++ b/hugo.yml
@@ -1,44 +1,78 @@
-baseURL: "https://github.com/biradon/biradon.github.io"
-languageCode: en-us
-title: Chau Minh Truong
-theme: PaperMod
+# Sample workflow for building and deploying a Hugo site to GitHub Pages
+name: Deploy Hugo site to Pages
 
-params:
-  env: production
-  defaultTheme: light
-  assets:
-    favicon32x32: "/tea-cup.png"
-  homeInfoParams:
-    Title: "Hi, My name is Minh 👋"
-    Content: "Welcome to my page"
-  socialIcons:
-    - name: github
-      url: "https://github.com/biradon"
-    - name: linkedin
-      url: "https://www.linkedin.com/in/chauminhtruong/"
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches:
+      - main
 
-  cover:
-    linkFullImages: true
-  
-  ShowBreadCrumbs: true
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
-  ShowReadingTime: true
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-  ShowShareButtons: true
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
-  ShowPostNavLinks: true
+# Default to bash
+defaults:
+  run:
+    shell: bash
 
-menu:
-  main:
-    - identifier: categories
-      name: Categories
-      url: /categories/
-      weight: 10
-    - identifier: tags
-      name: Tags
-      url: /tags/
-      weight: 10
-    - identifier: archives
-      name: Archives
-      url: /archives/
-      weight: 10
+jobs:
+  # Build job
+  build:
+    runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.137.1
+    steps:
+      - name: Install Hugo CLI
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb          
+      - name: Install Dart Sass
+        run: sudo snap install dart-sass
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+      - name: Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: Build with Hugo
+        env:
+          HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
+          HUGO_ENVIRONMENT: production
+          TZ: America/Los_Angeles
+        run: |
+          hugo \
+            --gc \
+            --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}/"          
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./public
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
