--- a/hugo.yml
+++ b/hugo.yml
@@ -10,8 +10,8 @@ params:
     favicon32x32: "/tea-cup.png"
   homeInfoParams:
     Title: "Hi, My name is Minh 👋"
-    Content: "I love sharing what I know. While I’ve doing quite-well this in everyday conversations, I now want to explore expressing it in non-verbal ways 📝
-              Also, I have a thing for emojis—you’re gonna see a lot  🤓"
+    Content: "I love sharing what I know. While I’ve been doing quite-well this in everyday conversations, I now want to explore expressing it in non-verbal ways 📝
+              Also, I have a thing for emojis — you’re gonna see a lot 😜"
   socialIcons:
     - name: linkedin
       url: "https://www.linkedin.com/in/chauminhtruong/"
