--- a/hugo.yml
+++ b/hugo.yml
@@ -35,9 +35,9 @@ menu:
     - name: "About Me 🤓"
       url: "/about/"
       weight: 1
-    - name: "My Projects 📦"
-      url: "/projects/"
-      weight: 2
+    # - name: "My Projects 📦"
+    #   url: "/projects/"
+    #   weight: 2
     - name: "Beyond Code 🚀"
       url: "/beyond-code/"
       weight: 4
